# operations-debs-contenttranslation-apertium-af-nl

./: apertium-af-nl_0.2.0~r57554.orig.tar.gz.delta  apertium-af-nl_0.2.0~r57554.orig.tar.gz.id  apertium-af-nl_0.2.0~r58256.orig.tar.bz2.delta  apertium-af-nl_0.2.0~r58256.orig.tar.bz2.id  apertium-af-nl_0.3.0.orig.tar.bz2.delta  apertium-af-nl_0.3.0.orig.tar.bz2.id
apertium-afr-0.2.0/: Makefile.am  README  apertium-afr.afr.dix  apertium-afr.pc.in  configure.ac  modes.xml
apertium-nld-0.2.0/: Makefile.am  apertium-nld.nld.dix  apertium-nld.pc.in  configure.ac  modes.xml
debian/: changelog  control
